--- a/src/lib/style/style.scss
+++ b/src/lib/style/style.scss
@@ -51,6 +51,14 @@ body {
 main .item {
     display: inline-block;
     max-width: 50%;
+    
+    h1 {
+        text-shadow: 0 0 5px hsl(266, 100%, 50%),
+            0 0 10px hsl(266, 100%, 50%),
+            0 0 20px hsl(266, 100%, 50%),
+            0 0 30px hsl(266, 100%, 50%),
+            0 0 40px hsl(266, 100%, 50%);
+    }
 }
 
 a {
