--- a/src/lib/style/_table.sass
+++ b/src/lib/style/_table.sass
@@ -3,6 +3,7 @@ table
     width: 100%
     height: 80%
     table-layout: fixed
+    border-collapse: collapse
 
     tr:nth-child(2n)
         background-color: rgba(45, 45, 45, 0.9)
@@ -20,6 +21,7 @@ table
     td:first-child
         font-size: 1.3rem
         font-weight: 700
+        border-right: 1px solid hsla(0, 0%, 0%, .5)
 
     input[type="number"]
         font-size: 1rem
