--- a/src/lib/style/style.scss
+++ b/src/lib/style/style.scss
@@ -7,85 +7,69 @@ $scroll-track: rgba(65, 65, 65, 0.8);
 $font-family: 'Kelly Slab', cursive;
 
 * {
-    font-family: $font-family;
-    color: white;
-    letter-spacing: .1rem;
+	font-family: $font-family;
+	color: white;
+	letter-spacing: 0.1rem;
 
-    &::-webkit-scrollbar {
-        width: 10px;
-        height: 1rem;
-    }
+	&::-webkit-scrollbar {
+		width: 10px;
+		height: 1rem;
+	}
 
-    &::-webkit-scrollbar-thumb {
-        background: -webkit-linear-gradient(
-            top, 
-            rgba(163, 163, 163, 0.4), 
-            rgba(0, 0, 0, 0.25)
-        ), -webkit-linear-gradient(
-            left, 
-            rgb(255, 0, 0), 
-            rgb(137, 111, 255)
-        );
-        background-size: 100% 100%, 100% 100%;
-        box-shadow: 1px 1px 5px 3px rgba(255, 255, 255, 0.8);
-    }
+	&::-webkit-scrollbar-thumb {
+		background: -webkit-linear-gradient(top, rgba(163, 163, 163, 0.4), rgba(0, 0, 0, 0.25)),
+			-webkit-linear-gradient(left, rgb(255, 0, 0), rgb(137, 111, 255));
+		background-size: 100% 100%, 100% 100%;
+		box-shadow: 1px 1px 5px 3px rgba(255, 255, 255, 0.8);
+	}
 
-    &::-webkit-scrollbar-track {
-        background: $scroll-track;
-    }
+	&::-webkit-scrollbar-track {
+		background: $scroll-track;
+	}
 }
 
 html {
-   height: 100%;
+	height: 100%;
 }
-
 
 body {
-    background-color: black;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    min-height: 100%;
+	background-color: black;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	min-height: 100%;
 }
 
-main .item {
-    display: inline-block;
-    max-width: 50%;
-    
-    h1 {
-        text-shadow: 0 0 5px hsl(266, 100%, 50%),
-            0 0 10px hsl(266, 100%, 50%),
-            0 0 20px hsl(266, 100%, 50%),
-            0 0 30px hsl(266, 100%, 50%),
-            0 0 40px hsl(266, 100%, 50%);
-    }
+main .item h1 {
+	text-shadow: 0 0 5px hsl(266, 100%, 50%), 0 0 10px hsl(266, 100%, 50%),
+		0 0 20px hsl(266, 100%, 50%), 0 0 30px hsl(266, 100%, 50%), 0 0 40px hsl(266, 100%, 50%);
 }
 
 a {
-    font-weight: 500;
-    color: #646cff;
-    text-decoration: inherit;
+	font-weight: 500;
+	color: #646cff;
+	text-decoration: inherit;
 }
 
 a:hover {
-    color: #535bf2;
+	color: #535bf2;
 }
 
 button {
-    font-size: 1rem;
-    font-family: $font-family;
-    padding: 0.6rem 1rem;
-    border: 0.5px solid gray;
-    background-color: inherit;
-    transition: all 0.4s ease;
-    color: inherit;
-    min-width: 2.8rem;
-    min-height: 2.8rem;
+	font-size: 1rem;
+	font-family: $font-family;
+	padding: 0.6rem 1rem;
+	border: 0.5px solid gray;
+	background-color: inherit;
+	transition: all 0.4s;
+	color: inherit;
+	min-width: 2.8rem;
+	min-height: 2.8rem;
 }
 
 button:hover {
-    color: white;
-    background-color: rgb(0, 57, 80);
-    border: 0.5px solid rgba(0, 57, 80);
-    cursor: pointer;
+	color: white;
+	background-color: rgb(0, 57, 80);
+	border: 0.5px solid rgba(0, 57, 80);
+	cursor: pointer;
 }
