--- a/src/lib/style/_btn.scss
+++ b/src/lib/style/_btn.scss
@@ -3,6 +3,12 @@ button.resetBtn {
 	background-color: red;
 	color: hsl(0, 0%, 90%);
 	border: none;
+	box-shadow: 
+		0 0 10px white,
+		0 0 20px red,
+		0 0 30px red,
+		0 0 40px red,
+		0 0 50px red;
 }
 
 button.resetBtn:hover {
