--- a/src/lib/style/_table.sass
+++ b/src/lib/style/_table.sass
@@ -4,6 +4,7 @@ table
     height: 80%
     table-layout: fixed
     border-collapse: collapse
+    box-shadow: 0 0 5px white, 0 0 20px red
 
     tr:nth-child(2n)
         background-color: rgba(45, 45, 45, 0.9)
